manifests/data/postgres/network-policy/ingress-from-cnpg-system.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnpg-operator-access-system
  namespace: postgres
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: postgres-operator
  ingress:
    # Exposing webhooks server
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
